RESOLVED FIXED276960
AX: Add findMatchingRange functionality to search for misspellings.
https://bugs.webkit.org/show_bug.cgi?id=276960
Summary AX: Add findMatchingRange functionality to search for misspellings.
Andres Gonzalez
Reported 2024-07-23 09:05:19 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-23 09:05:32 PDT
Andres Gonzalez
Comment 2 2024-07-23 17:37:42 PDT
EWS
Comment 3 2024-07-24 13:24:51 PDT
Committed 281312@main (cb7830fdfa6c): <https://commits.webkit.org/281312@main> Reviewed commits have been landed. Closing PR #31136 and removing active labels.
EWS
Comment 4 2024-07-26 11:06:00 PDT
Committed 280938.132@safari-7619-branch (672233b1b208): <https://commits.webkit.org/280938.132@safari-7619-branch> Reviewed commits have been landed. Closing PR #1498 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.